syntax = "proto3";

package system;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/quarkloop/quarkloop/service/v1/system";

message Org {
  // id
  int32 id = 1;
  string ScopeId = 2;

  // data
  string name = 3;
  string description = 4;
  int32 visibility = 5;
  string path = 6;

  // history
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 9;
  string createdBy = 8;
  string updatedBy = 10;  
}

message Workspace {
  // id
  int32 id = 1;
  int32 orgId = 2;
  string ScopeId = 3;
  string orgScopeId = 4;

  // data
  string name = 5;
  string description = 6;
  int32 visibility = 7;
  string path = 8;

  // history
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
  string createdBy = 11;
  string updatedBy = 12;  
}

message Project {
  // id
  int32 id = 1;
  int32 orgId = 2;
  int32 workspaceId = 3;
  string ScopeId = 4;
  string orgScopeId = 5;
  string workspaceScopeId = 6;

  // data
  string name = 7;
  string description = 8;
  int32 visibility = 9;
  string path = 10;

  // history
  google.protobuf.Timestamp createdAt = 11;
  google.protobuf.Timestamp updatedAt = 12;
  string createdBy = 13;
  string updatedBy = 14;  
}
